@startuml servicos_fecho_sincronizacao
skinparam classAttributeIconSize 0
skinparam classFontSize 12
skinparam classHeaderBackgroundColor #EEEDFE
skinparam classBorderColor #534AB7
skinparam classBackgroundColor #FAFAFA
skinparam arrowColor #534AB7
skinparam stereotypeCBackgroundColor #E1F5EE
skinparam stereotypeABackgroundColor #FAC775
skinparam stereotypeIBackgroundColor #D1ECF1
skinparam packageBackgroundColor #F8F8F8
skinparam packageBorderColor #B4B2A9
skinparam linetype ortho
skinparam nodesep 40
skinparam ranksep 50

title Software de Loja — Serviços (Módulo: Fecho e Sincronização)

package "Sincronização (Rede)" #F0F4FA {
  interface SincronizacaoGateway {
    + enviarFechoDia(pacote : PacoteFechoDTO) : boolean
    + verificarConexao() : boolean
  }
}

package "Serviço (Interface - Fecho e Sincronização)" #E0F0E0 {

  interface IFechoDiaServico {
    + executarFecho(utilizador : Utilizador, configuracao : ConfiguracaoTerminal) : FechoDia
    + reenviar(idFecho : int) : boolean
    + reverterEmTransito() : void
  }
}

package "Serviço (Implementação - Fecho e Sincronização)" #EEF9F4 {

  class FechoDiaServico {
    - fechoDiaRepositorio : FechoDiaRepositorio
    - vendaServico : IVendaServico
    - devolucaoServico : IDevolucaoServico
    - caixaServico : ICaixaServico
    - remessaServico : IRemessaServico
    - auditoriaServico : IAuditoriaServico
    - autorizacaoServico : IAutorizacaoServico
    - gateway : SincronizacaoGateway
    
    + executarFecho(utilizador : Utilizador, configuracao : ConfiguracaoTerminal) : FechoDia
    + reenviar(idFecho : int) : boolean
    + reverterEmTransito() : void
    - compilarDadosPendentes() : PacoteFechoDTO
    - marcarRegistosComo(estado : EstadoSincronizacao) : void
  }
}

' Implementação realiza interface
FechoDiaServico ..|> IFechoDiaServico

' Relações com Repositório (apenas o próprio)
FechoDiaServico ..> FechoDiaRepositorio : persiste fecho

' Relações com outros Serviços (via interfaces)
FechoDiaServico ..> IVendaServico : obterVendasPendentes
FechoDiaServico ..> IDevolucaoServico : obterDevolucoesPendentes
FechoDiaServico ..> ICaixaServico : obterSessoesPendentes
FechoDiaServico ..> IRemessaServico : obterRemessas/PagamentosPendentes
FechoDiaServico ..> IAuditoriaServico : obterLogsPendentes
FechoDiaServico ..> IAutorizacaoServico

' Relação de Rede
FechoDiaServico ..> SincronizacaoGateway : envia pacote

@enduml
